Improved responsive design on main-objectives.html Fix layout: display on small devices

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -405,3 +405,28 @@ footer
       height: auto;
    }
 }
+// Extra small devices
+@media only screen and (max-width: 575px)
+{
+   .career,
+   .sport,
+   .english,
+   .book
+   {
+      .sub-title
+      {
+         font-size: 2rem;
+      }
+      .title
+      {
+         font-size: 1.5rem;
+      }
+   }
+   .book
+   {
+      .title
+      {
+         white-space: nowrap;
+      }
+   }
+}
